@@ -80,6 +80,7 @@ Changelog
  * Add shortcut for accessing StreamField blocks by block name with new `blocks_by_name` and `first_block_by_name` methods on `StreamValue` (Tidiane Dia, Matt Westcott)
  * Extend support for custom user interface colours across almost all admin colours (Thibaud Colas)
  * Add HTML-aware max_length validation on RichTextField and RichTextBlock (Matt Westcott)
+ * Remove undocumented `SearchableListMixin` (Sage Abdullah)
  * Fix: Typo in `ResumeWorkflowActionFormatter` message (Stefan Hammer)
  * Fix: Throw a meaningful error when saving an image to an unrecognised image format (Christian Franke)
  * Fix: Remove extra padding for headers with breadcrumbs on mobile viewport (Steven Steinwand)
